test/expected/declare_udc_a4i.out
declare user-defined conversion operator returning A4
                                                   ^
52: error: user-defined conversion operator can not convert to an array; did you mean pointer to array?
